--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,6 +37,7 @@
             android:layout_marginBottom="-5.5dp"
             android:layout_marginTop="-5.5dp"
             android:onClick="reset"
+            android:background="#FF6F00"
             android:fontFamily="sans-serif-light"/>
 
 
@@ -51,6 +52,7 @@
             android:layout_marginTop="-5.5dp"
             android:fontFamily="sans-serif-light"
             android:onClick="toStorage"
+            android:background="#FF6F00"
             android:id="@+id/button8" />
 
 
@@ -64,6 +66,7 @@
             android:layout_marginBottom="-5.5dp"
             android:layout_marginTop="-5.5dp"
             android:id="@+id/button4"
+            android:background="#FF6F00"
             android:onClick="percentage"
             android:fontFamily="sans-serif-light"/>
 
@@ -77,6 +80,7 @@
             android:layout_marginLeft="-5.5dp"
             android:layout_marginBottom="-5.5dp"
             android:layout_marginTop="-5.5dp"
+            android:background="#FF6F00"
             android:fontFamily="sans-serif-light"
             android:onClick="setDivide" />
 
@@ -97,6 +101,7 @@
             android:text="7"
             android:textSize="55sp"
             android:layout_marginTop="-5dp"
+            android:background="#FFB74D"
             android:layout_marginBottom="-5.5dp"
             android:fontFamily="sans-serif-light"
             android:onClick="set7"/>
@@ -110,6 +115,7 @@
             android:textSize="55sp"
             android:layout_marginLeft="-5.5dp"
             android:layout_marginTop="-5dp"
+            android:background="#FFB74D"
             android:layout_marginBottom="-5.5dp"
             android:fontFamily="sans-serif-light"
             android:onClick="set8"/>
@@ -121,6 +127,7 @@
             android:layout_weight="1"
             android:text="9"
             android:textSize="55sp"
+            android:background="#FFB74D"
             android:layout_marginLeft="-5.5dp"
             android:layout_marginTop="-5dp"
             android:layout_marginBottom="-5.5dp"
@@ -138,6 +145,8 @@
             android:layout_marginTop="-5dp"
             android:layout_marginBottom="-5.5dp"
             android:id="@+id/button2"
+
+            android:background="#FF6F00"
             android:fontFamily="sans-serif-light"
             android:onClick="setMultiply" />
 
@@ -156,6 +165,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:text="4"
+            android:background="#FFB74D"
             android:textSize="55sp"
             android:layout_marginTop="-5dp"
             android:layout_marginBottom="-5.5dp"
@@ -169,12 +179,14 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:text="5"
+            android:background="#FFB74D"
             android:textSize="55sp"
             android:layout_marginLeft="-5.5dp"
             android:layout_marginTop="-5dp"
             android:onClick="set5"
             android:layout_marginBottom="-5.5dp"
-            android:fontFamily="sans-serif-light"/>
+            android:fontFamily="sans-serif-light"
+            android:id="@+id/button" />
 
 
         <Button
@@ -185,6 +197,7 @@
             android:textSize="55sp"
             android:layout_marginLeft="-5.5dp"
             android:layout_marginTop="-5dp"
+            android:background="#FFB74D"
             android:layout_marginBottom="-5.5dp"
             android:id="@+id/button5"
             android:fontFamily="sans-serif-light"
@@ -201,7 +214,9 @@
             android:layout_marginBottom="-5.5dp"
             android:layout_marginTop="-5dp"
             android:fontFamily="sans-serif-light"
-            android:onClick="setMinus"/>
+            android:onClick="setMinus"
+            android:background="#FF6F00"
+            android:id="@+id/button9" />
 
     </LinearLayout>
 
@@ -218,6 +233,7 @@
             android:id="@+id/button1"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:background="#FFB74D"
             android:text="1"
             android:textSize="55sp"
             android:layout_marginTop="-5dp"
@@ -232,6 +248,7 @@
             android:layout_weight="1"
             android:text="2"
             android:textSize="55sp"
+            android:background="#FFB74D"
             android:layout_marginLeft="-5.5dp"
             android:layout_marginTop="-5dp"
             android:layout_marginBottom="-5.5dp"
@@ -245,6 +262,7 @@
             android:layout_weight="1"
             android:text="3"
             android:textSize="55sp"
+            android:background="#FFB74D"
             android:layout_marginLeft="-5.5dp"
             android:layout_marginTop="-5dp"
             android:layout_marginBottom="-5.5dp"
@@ -263,6 +281,7 @@
             android:layout_marginTop="-5dp"
             android:layout_marginBottom="-5.5dp"
             android:fontFamily="sans-serif-light"
+            android:background="#FF6F00"
             android:onClick="setPlus"
             android:id="@+id/button7" />
 
@@ -282,6 +301,7 @@
             android:text="0"
             android:layout_weight="1.94"
             android:textSize="55sp"
+            android:background="#FFB74D"
             android:layout_marginTop="-5dp"
             android:onClick="set0"
             android:fontFamily="sans-serif-light"/>
@@ -293,6 +313,7 @@
             android:layout_weight="1"
             android:text="."
             android:textSize="70sp"
+            android:background="#FFB74D"
             android:layout_marginLeft="-5.5dp"
             android:layout_marginTop="-5dp"
             android:fontFamily="sans-serif-light"
@@ -308,6 +329,7 @@
             android:layout_marginLeft="-5.5dp"
             android:layout_marginTop="-5dp"
             android:fontFamily="sans-serif-light"
+            android:background="#FF6F00"
             android:onClick="result"/>
 
     </LinearLayout>
