--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,6 +9,13 @@
     </style>
     <style name="numberButtons" parent="Widget.AppCompat.Button">
         <item name="android:color">#82B1FF</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_marginTop">-5dp</item>
+        <item name="android:layout_marginBottom">-5.5dp</item>
+        <item name="android:fontFamily">sans-serif-light</item>
+        <item name="android:textSize">55sp</item>
     </style>
     <style name="signButtons" parent="Widget.AppCompat.Button">
         <item name="android:color">#1565C0</item>
