Setting sans-serif-light as the font

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,6 @@
     tools:context="com.example.android.calculator.MainActivity"
     android:orientation="vertical">
 
-
     <TextView
         android:id="@+id/text"
         android:layout_width="match_parent"
@@ -17,66 +16,48 @@
         android:paddingTop="10dp"
         android:textColor="#000000" />
 
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
         android:orientation="horizontal">
 
-
         <Button
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
+            style="@style/signButtons"
             android:id="@+id/clear"
             android:textSize="40sp"
             android:layout_marginBottom="-5.5dp"
             android:layout_marginTop="-5.5dp"
-            android:onClick="resetAll"
-            android:background="#1565C0" />
-
+            android:onClick="resetAll" />
 
         <Button
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
+            style="@style/signButtons"
             android:text="sto>"
             android:textSize="30sp"
             android:layout_marginLeft="-5.5dp"
             android:layout_marginBottom="-5.5dp"
             android:layout_marginTop="-5.5dp"
-            android:onClick="goToStorage"
-            android:background="#1565C0" />
-
+            android:onClick="goToStorage" />
 
         <Button
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
+            style="@style/signButtons"
             android:text="%"
             android:textSize="45sp"
             android:layout_marginLeft="-5.5dp"
             android:layout_marginBottom="-5.5dp"
             android:layout_marginTop="-5.5dp"
-            android:background="#1565C0"
             android:onClick="percentage" />
 
-
         <Button
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
+            style="@style/signButtons"
             android:text="/"
             android:textSize="45sp"
             android:layout_marginLeft="-5.5dp"
             android:layout_marginBottom="-5.5dp"
             android:layout_marginTop="-5.5dp"
-            android:background="#1565C0"
             android:onClick="setDivide" />
 
     </LinearLayout>
-
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -84,12 +65,10 @@
         android:layout_weight="1"
         android:orientation="horizontal">
 
-
         <Button
             style="@style/numberButtons"
             android:text="7"
             android:onClick="set7"/>
-
 
         <Button
             style="@style/numberButtons"
@@ -97,28 +76,22 @@
             android:layout_marginLeft="-5.5dp"
             android:onClick="set8"/>
 
-
         <Button
             style="@style/numberButtons"
             android:text="9"
             android:layout_marginLeft="-5.5dp"
             android:onClick="set9"/>
 
-
         <Button
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
+            style="@style/signButtons"
             android:text="X"
             android:textSize="35sp"
             android:layout_marginLeft="-5.5dp"
             android:layout_marginTop="-5dp"
             android:layout_marginBottom="-5.5dp"
-            android:background="#1565C0"
             android:onClick="setMultiply" />
 
     </LinearLayout>
-
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -126,19 +99,16 @@
         android:layout_weight="1"
         android:orientation="horizontal">
 
-
         <Button
             style="@style/numberButtons"
             android:text="4"
             android:onClick="set4" />
-
 
         <Button
             style="@style/numberButtons"
             android:text="5"
             android:layout_marginLeft="-5.5dp"
             android:onClick="set5" />
-
 
         <Button
             style="@style/numberButtons"
@@ -147,21 +117,16 @@
             android:onClick="set6"
             android:text="6" />
 
-
         <Button
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
+            style="@style/signButtons"
             android:text="-"
             android:textSize="60sp"
             android:layout_marginLeft="-5.5dp"
             android:layout_marginBottom="-5.5dp"
             android:layout_marginTop="-5dp"
-            android:onClick="setMinus"
-            android:background="#1565C0" />
+            android:onClick="setMinus" />
 
     </LinearLayout>
-
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -169,19 +134,16 @@
         android:layout_weight="1"
         android:orientation="horizontal">
 
-
         <Button
             style="@style/numberButtons"
             android:text="1"
             android:onClick="set1" />
-
 
         <Button
             style="@style/numberButtons"
             android:text="2"
             android:layout_marginLeft="-5.5dp"
             android:onClick="set2" />
-
 
         <Button
             style="@style/numberButtons"
@@ -190,21 +152,16 @@
             android:onClick="set3"
             android:text="3" />
 
-
         <Button
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
+            style="@style/signButtons"
             android:text="+"
             android:textSize="55sp"
             android:layout_marginLeft="-5.5dp"
             android:layout_marginTop="-5dp"
             android:layout_marginBottom="-5.5dp"
-            android:background="#1565C0"
             android:onClick="setPlus" />
 
     </LinearLayout>
-
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -212,10 +169,8 @@
         android:layout_weight="1"
         android:orientation="horizontal">
 
-
         <Button
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
+            style="@style/signButtons"
             android:text="0"
             android:layout_weight="1.94"
             android:textSize="55sp"
@@ -223,28 +178,21 @@
             android:layout_marginTop="-5dp"
             android:onClick="set0" />
 
-
         <Button
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
+            style="@style/signButtons"
+            android:background="#82B1FF"
             android:text="."
             android:textSize="70sp"
-            android:background="#82B1FF"
             android:layout_marginLeft="-5.5dp"
             android:layout_marginTop="-5dp"
             android:onClick="setFraction"/>
 
-
         <Button
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
+            style="@style/signButtons"
             android:text="="
             android:textSize="60sp"
             android:layout_marginLeft="-5.5dp"
             android:layout_marginTop="-5dp"
-            android:background="#1565C0"
             android:onClick="result"/>
 
     </LinearLayout>
