--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,8 @@
         android:gravity="end"
         android:textSize="60sp"
         android:paddingTop="10dp"
-        android:textColor="#000000" />
+        android:textColor="#000000"
+        android:fontFamily="sans-serif-light"/>
 
     <LinearLayout
         android:layout_width="match_parent"
